miniextendr-macros/tests/ui/module_label_invalid_type.stderr
error: expected string literal
  --> tests/ui/module_label_invalid_type.rs:16:17
   |
16 |     impl Foo as methods;
   |                 ^^^^^^^

error[E0425]: cannot find value `call_method_def_Foo_methods_value` in this scope
 --> tests/ui/module_label_invalid_type.rs:8:6
  |
7 | #[miniextendr(label = "methods")]
  | --------------------------------- similarly named constant `call_method_def_Foo_value` defined here
8 | impl Foo {
  |      ^^^ help: a constant with a similar name exists: `call_method_def_Foo_value`

error[E0277]: the trait bound `Foo: TypedExternal` is not satisfied
 --> tests/ui/module_label_invalid_type.rs:8:6
  |
7 | #[miniextendr(label = "methods")]
  | --------------------------------- required by a bound introduced by this call
8 | impl Foo {
  |      ^^^ unsatisfied trait bound
  |
help: the trait `TypedExternal` is not implemented for `Foo`
 --> tests/ui/module_label_invalid_type.rs:5:1
  |
5 | struct Foo;
  | ^^^^^^^^^^
  = help: the following other types implement trait `TypedExternal`:
            &'static [T]
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others
note: required by a bound in `ExternalPtr::<()>::downcast_ref`
 --> $WORKSPACE/miniextendr-api/src/externalptr.rs
  |
  |     pub fn downcast_ref<T: TypedExternal>(&self) -> Option<&T> {
  |                            ^^^^^^^^^^^^^ required by this bound in `ExternalPtr::<()>::downcast_ref`
help: use a unary tuple instead
  |
7 | (#[miniextendr(label = "methods")],)
  | +                                 ++
